refactor(pwa): mover botão de instalação para o menu e melhorar estados
Move o botão de instalação do PWA para o menu principal e aprimora a lógica de estados do botão, substituindo a abordagem de ocultar/mostrar por estados de habilitado/desabilitado com mensagens contextuais. Isso melhora a experiência do usuário ao fornecer feedback mais claro sobre o status de instalação.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
                 </svg>
                 <span>Limpar Dados</span>
               </button>
+              <button id="install-pwa-btn" class="menu-item">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="feather feather-download">
+                  <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                  <polyline points="7 10 12 15 17 10"></polyline>
+                  <line x1="12" y1="15" x2="12" y2="3"></line>
+                </svg>
+                <span>Instalar App</span>
+              </button>
               <!-- Popup de confirmação -->
               <div id="confirmPopup" class="popup-overlay">
                 <div class="popup-box">
@@ -170,7 +180,6 @@
       </div>
     </div>
 
-    <button id="install-pwa-btn" class="button primary install-pwa-btn hidden">Instalar App</button>
   </div>
   <div id="confirm-dialog" class="dialog hidden">
     <div class="dialog-content">
