--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@
           <input type="text" id="search-input" placeholder="Pesquisar conteúdo...">
         </div>
         <div class="actions-container">
+          <button id="toggle-dark-mode-btn" class="button icon-button" title="Alternar Modo Escuro/Claro">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              class="feather feather-moon dark-icon">
+              <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              class="feather feather-sun light-icon">
+              <circle cx="12" cy="12" r="5"></circle>
+              <line x1="12" y1="1" x2="12" y2="3"></line>
+              <line x1="12" y1="21" x2="12" y2="23"></line>
+              <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+              <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+              <line x1="1" y1="12" x2="3" y2="12"></line>
+              <line x1="21" y1="12" x2="23" y2="12"></line>
+              <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+              <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+            </svg>
+          </button>
           <button id="add-item-btn" class="button primary">Adicionar Item</button>
           <div class="menu-container">
             <button id="menu-btn" class="button icon-button">⋮</button>
@@ -62,6 +82,16 @@
                   <line x1="12" y1="15" x2="12" y2="3"></line>
                 </svg>
                 <span>Exportar json</span>
+              </button>
+              <button id="toggle-archived-btn" class="menu-item">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="feather feather-archive">
+                  <polyline points="21 8 21 21 3 21 3 8"></polyline>
+                  <rect x="1" y="3" width="22" height="5"></rect>
+                  <line x1="10" y1="12" x2="14" y2="12"></line>
+                </svg>
+                <span>Mostrar Arquivados</span>
               </button>
               <button id="clear-data-btn" class="danger menu-item">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
@@ -104,6 +134,11 @@
     </header>
 
     <main class="container">
+      <div id="tags-filter-container" class="tags-filter-container hidden">
+        <span class="filter-label">Filtrar por tags:</span>
+        <div id="active-tag-filters" class="active-tag-filters"></div>
+        <span id="clear-filters" class="clear-filters">Limpar filtros</span>
+      </div>
       <div id="items-grid" class="items-grid">
       </div>
       <div id="empty-state" class="empty-state hidden">
@@ -143,6 +178,17 @@
           <div class="form-group hidden" id="language-input-container">
             <label for="code-language">Linguagem</label>
             <input type="text" id="code-language" placeholder="ex: javascript, python, html">
+          </div>
+          <div class="form-group">
+            <label for="item-tags">Tags (separadas por vírgula)</label>
+            <input type="text" id="item-tags" placeholder="ex: trabalho, código, ideias">
+          </div>
+          <div class="form-group">
+            <label for="item-color">Cor</label>
+            <div class="color-selector">
+              <input type="color" id="item-color" value="#ffffff">
+              <span class="color-preview"></span>
+            </div>
           </div>
           <div class="form-group">
             <div class="label-container">
